# dawn-android-example

./: .gitignore  CMakeLists.txt  README.md  build_android.sh
android_studio_files/: AndroidManifest.xml  build.gradle
src/: lib.cpp  lib.h  main.cpp  util.cpp  util.h
